// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "historicalCatalogName": "Please enter an historical catalog name",
  "name": "Please enter a name",
  "realtimeReportName": "Please enter a realtime report name",
  "realtimeReportType": "Please select a realtime report type",
  "reportType": "Please select a report type",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "historicalCatalogName": "Please enter an historical catalog name",
  "name": "Please enter a name",
  "realtimeReportName": "Please enter a realtime report name",
  "realtimeReportType": "Please select a realtime report type",
  "reportType": "Please select a report type",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "historicalCatalogName": "Please enter an historical catalog name",
  "name": false,
  "realtimeReportName": false,
  "realtimeReportType": false,
  "reportType": false,
}
`;

exports[`formValidation returns proper object when required fields are provided with custom realtimeReportType 1`] = `
Object {
  "historicalCatalogName": "Please enter an historical catalog name",
  "name": false,
  "realtimeReportName": false,
  "realtimeReportType": false,
  "reportType": false,
}
`;

exports[`formValidation returns proper object when required fields are provided with historical type 1`] = `
Object {
  "historicalCatalogName": false,
  "name": false,
  "realtimeReportName": "Please enter a realtime report name",
  "realtimeReportType": "Please select a realtime report type",
  "reportType": false,
}
`;
